# mf4u

./: .gitignore  COMMANDS.md  DEPENDENCIES.md  README.md  SPEC.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
sidecar/: __main__.py  blf.py  export.py  metadata.py  requirements.txt  stats.py
sidecar/tests/: conftest.py  generate_fixtures.py  test_blf.py  test_config.py  test_export.py  test_metadata.py  test_stats.py
sidecar/tests/fixtures/: bus_raw.mf4  can_bus.blf  can_bus.dbc  minimal.mf4  multi_group.mf4
src-tauri/: Cargo.toml  entitlements.macos.plist  tauri.conf.json
src-tauri/binaries/: mf4u_sidecar-aarch64-apple-darwin
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: busColors.ts  prefs.ts  rpc.ts
src/lib/components/: AboutDialog.svelte  ChannelFilterDialog.svelte  CopyConflictDialog.svelte  ExportDialog.svelte  FrameDecodingDialog.svelte  MetadataPanel.svelte  PreferencesDialog.svelte  SaveConfigDialog.svelte  SignalTree.svelte  Toolbar.svelte
src/routes/: +page.svelte
